# llm-tool-manifest

./: README.md  pyproject.toml
src/llm_tool_manifest/: __init__.py  core.py
tests/: test_llm_tool_manifest.py
