[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-tool-manifest"
version = "0.1.0"
description = "Declare and export a tool collection for Anthropic and OpenAI APIs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_tool_manifest"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
